// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ConnectModal without guide > should render in dark mode 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-1gzra4a ant-web3-connect-modal-root"
    >
      <div
        class="ant-modal-mask ant-fade-appear ant-fade-appear-start ant-fade"
      />
      <div
        class="ant-modal-wrap"
        tabindex="-1"
      >
        <div
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-1gzra4a ant-web3-connect-modal css-dev-only-do-not-override-1gzra4a ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
          role="dialog"
          style="width: 380px;"
        >
          <div
            style="outline: none;"
            tabindex="0"
          >
            <div
              class="ant-modal-content"
            >
              <button
                aria-label="Close"
                class="ant-modal-close"
                type="button"
              >
                <span
                  aria-label="Close"
                  class="ant-modal-close-x"
                >
                  <span
                    aria-label="close"
                    class="anticon anticon-close ant-modal-close-icon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="close"
                      fill="currentColor"
                      fill-rule="evenodd"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
              <div
                class="ant-modal-body"
              >
                <div
                  class="ant-web3-connect-modal-body ant-web3-connect-modal-body-simple css-dev-only-do-not-override-1gzra4a"
                >
                  <div
                    class="ant-web3-connect-modal-list-panel"
                  >
                    <div
                      class="ant-web3-connect-modal-header"
                    >
                      <h2
                        class="ant-web3-connect-modal-title"
                      >
                        ConnectModal
                      </h2>
                    </div>
                    <div
                      class="ant-web3-connect-modal-list"
                    >
                      <div
                        class="ant-web3-connect-modal-list-container"
                      >
                        <div
                          class="ant-web3-connect-modal-wallet-list"
                        >
                          <div
                            class="ant-web3-connect-modal-group"
                          >
                            <div
                              class="ant-web3-connect-modal-group-title"
                            >
                              Popular
                            </div>
                            <div
                              class="ant-web3-connect-modal-group-content"
                            >
                              <div
                                class="ant-list ant-list-split css-dev-only-do-not-override-1gzra4a"
                              >
                                <div
                                  class="ant-spin-nested-loading css-dev-only-do-not-override-1gzra4a"
                                >
                                  <div
                                    class="ant-spin-container"
                                  >
                                    <ul
                                      class="ant-list-items"
                                    >
                                      <li
                                        class="ant-list-item ant-web3-connect-modal-wallet-item"
                                      >
                                        <div
                                          class="ant-web3-connect-modal-content"
                                        >
                                          <img
                                            alt="Test Wallet"
                                            class="ant-web3-connect-modal-img"
                                            src="https://mdn.alipayobjects.com/huamei_mutawc/afts/img/A*8LhqSZ_KatsAAAAAAAAAAAAAelrGAQ/fmt.webp"
                                          />
                                          <span
                                            aria-describedby="test-id"
                                            class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-web3-connect-modal-name css-dev-only-do-not-override-1gzra4a"
                                          >
                                            Test Wallet
                                          </span>
                                        </div>
                                        <div
                                          class="ant-space css-dev-only-do-not-override-1gzra4a ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
                                        >
                                          <div
                                            class="ant-space-item"
                                          />
                                        </div>
                                      </li>
                                      <li
                                        class="ant-list-item ant-web3-connect-modal-wallet-item"
                                      >
                                        <div
                                          class="ant-web3-connect-modal-content"
                                        >
                                          <img
                                            alt="Test Wallet3"
                                            class="ant-web3-connect-modal-img"
                                            src="https://mdn.alipayobjects.com/huamei_mutawc/afts/img/A*8LhqSZ_KatsAAAAAAAAAAAAAelrGAQ/fmt.webp"
                                          />
                                          <span
                                            aria-describedby="test-id"
                                            class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-web3-connect-modal-name css-dev-only-do-not-override-1gzra4a"
                                          >
                                            Test Wallet3
                                          </span>
                                        </div>
                                        <div
                                          class="ant-space css-dev-only-do-not-override-1gzra4a ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
                                        >
                                          <div
                                            class="ant-space-item"
                                          />
                                        </div>
                                      </li>
                                    </ul>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="ant-web3-connect-modal-group"
                          >
                            <div
                              class="ant-web3-connect-modal-group-title"
                            >
                              More
                            </div>
                            <div
                              class="ant-web3-connect-modal-group-content"
                            >
                              <div
                                class="ant-list ant-list-split css-dev-only-do-not-override-1gzra4a"
                              >
                                <div
                                  class="ant-spin-nested-loading css-dev-only-do-not-override-1gzra4a"
                                >
                                  <div
                                    class="ant-spin-container"
                                  >
                                    <ul
                                      class="ant-list-items"
                                    >
                                      <li
                                        class="ant-list-item ant-web3-connect-modal-wallet-item"
                                      >
                                        <div
                                          class="ant-web3-connect-modal-content"
                                        >
                                          <img
                                            alt="Test Wallet2"
                                            class="ant-web3-connect-modal-img"
                                            src="https://mdn.alipayobjects.com/huamei_mutawc/afts/img/A*8LhqSZ_KatsAAAAAAAAAAAAAelrGAQ/fmt.webp"
                                          />
                                          <span
                                            aria-describedby="test-id"
                                            class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-web3-connect-modal-name css-dev-only-do-not-override-1gzra4a"
                                          >
                                            Test Wallet2
                                          </span>
                                        </div>
                                        <div
                                          class="ant-space css-dev-only-do-not-override-1gzra4a ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
                                        >
                                          <div
                                            class="ant-space-item"
                                          />
                                        </div>
                                      </li>
                                      <li
                                        class="ant-list-item ant-web3-connect-modal-wallet-item"
                                      >
                                        <div
                                          class="ant-web3-connect-modal-content"
                                        >
                                          <img
                                            alt="Test Wallet4"
                                            class="ant-web3-connect-modal-img"
                                          />
                                          <span
                                            aria-describedby="test-id"
                                            class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-web3-connect-modal-name css-dev-only-do-not-override-1gzra4a"
                                          >
                                            Test Wallet4
                                          </span>
                                        </div>
                                        <div
                                          class="ant-space css-dev-only-do-not-override-1gzra4a ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
                                        >
                                          <div
                                            class="ant-space-item"
                                          />
                                        </div>
                                      </li>
                                      <li
                                        class="ant-list-item ant-web3-connect-modal-wallet-item"
                                      >
                                        <div
                                          class="ant-web3-connect-modal-content"
                                        >
                                          <img
                                            alt="Test Wallet5"
                                            class="ant-web3-connect-modal-img"
                                          />
                                          <span
                                            aria-describedby="test-id"
                                            class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-web3-connect-modal-name css-dev-only-do-not-override-1gzra4a"
                                          >
                                            Test Wallet5
                                          </span>
                                        </div>
                                        <div
                                          class="ant-space css-dev-only-do-not-override-1gzra4a ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
                                        >
                                          <div
                                            class="ant-space-item"
                                          />
                                        </div>
                                      </li>
                                      <li
                                        class="ant-list-item ant-web3-connect-modal-wallet-item"
                                      >
                                        <div
                                          class="ant-web3-connect-modal-content"
                                        >
                                          <img
                                            alt="Test Wallet6"
                                            class="ant-web3-connect-modal-img"
                                          />
                                          <span
                                            aria-describedby="test-id"
                                            class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-web3-connect-modal-name css-dev-only-do-not-override-1gzra4a"
                                          >
                                            Test Wallet6
                                          </span>
                                        </div>
                                        <div
                                          class="ant-space css-dev-only-do-not-override-1gzra4a ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
                                        >
                                          <div
                                            class="ant-space-item"
                                          />
                                        </div>
                                      </li>
                                      <li
                                        class="ant-list-item ant-web3-connect-modal-wallet-item"
                                      >
                                        <div
                                          class="ant-web3-connect-modal-content"
                                        >
                                          <img
                                            alt="Test Wallet6"
                                            class="ant-web3-connect-modal-img"
                                          />
                                          <span
                                            aria-describedby="test-id"
                                            class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-web3-connect-modal-name css-dev-only-do-not-override-1gzra4a"
                                          >
                                            Test Wallet6
                                          </span>
                                        </div>
                                        <div
                                          class="ant-space css-dev-only-do-not-override-1gzra4a ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
                                        >
                                          <div
                                            class="ant-space-item"
                                          />
                                        </div>
                                      </li>
                                    </ul>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-web3-connect-modal-footer-container"
                      >
                        <div
                          class="ant-web3-connect-modal-simple-guide"
                        >
                          New to crypto wallets?
                          <button
                            class="ant-btn css-dev-only-do-not-override-1gzra4a ant-btn-link ant-btn-color-link ant-btn-variant-link ant-btn-sm ant-web3-connect-modal-simple-guide-right"
                            type="button"
                          >
                            <span>
                              Learn More
                            </span>
                          </button>
                        </div>
                        <div
                          class="ant-web3-connect-modal-footer"
                        >
                          Powered by AntChain
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ConnectModal without guide > should render in light mode 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-vrrzze ant-web3-connect-modal-root"
    >
      <div
        class="ant-modal-mask ant-fade-appear ant-fade-appear-start ant-fade"
      />
      <div
        class="ant-modal-wrap"
        tabindex="-1"
      >
        <div
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-vrrzze ant-web3-connect-modal css-dev-only-do-not-override-vrrzze ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
          role="dialog"
          style="width: 380px;"
        >
          <div
            style="outline: none;"
            tabindex="0"
          >
            <div
              class="ant-modal-content"
            >
              <button
                aria-label="Close"
                class="ant-modal-close"
                type="button"
              >
                <span
                  aria-label="Close"
                  class="ant-modal-close-x"
                >
                  <span
                    aria-label="close"
                    class="anticon anticon-close ant-modal-close-icon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="close"
                      fill="currentColor"
                      fill-rule="evenodd"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
              <div
                class="ant-modal-body"
              >
                <div
                  class="ant-web3-connect-modal-body ant-web3-connect-modal-body-simple css-dev-only-do-not-override-vrrzze"
                >
                  <div
                    class="ant-web3-connect-modal-list-panel"
                  >
                    <div
                      class="ant-web3-connect-modal-header"
                    >
                      <h2
                        class="ant-web3-connect-modal-title"
                      >
                        ConnectModal
                      </h2>
                    </div>
                    <div
                      class="ant-web3-connect-modal-list"
                    >
                      <div
                        class="ant-web3-connect-modal-list-container"
                      >
                        <div
                          class="ant-web3-connect-modal-wallet-list"
                        >
                          <div
                            class="ant-web3-connect-modal-group"
                          >
                            <div
                              class="ant-web3-connect-modal-group-title"
                            >
                              Popular
                            </div>
                            <div
                              class="ant-web3-connect-modal-group-content"
                            >
                              <div
                                class="ant-list ant-list-split css-dev-only-do-not-override-vrrzze"
                              >
                                <div
                                  class="ant-spin-nested-loading css-dev-only-do-not-override-vrrzze"
                                >
                                  <div
                                    class="ant-spin-container"
                                  >
                                    <ul
                                      class="ant-list-items"
                                    >
                                      <li
                                        class="ant-list-item ant-web3-connect-modal-wallet-item"
                                      >
                                        <div
                                          class="ant-web3-connect-modal-content"
                                        >
                                          <img
                                            alt="Test Wallet"
                                            class="ant-web3-connect-modal-img"
                                            src="https://mdn.alipayobjects.com/huamei_mutawc/afts/img/A*8LhqSZ_KatsAAAAAAAAAAAAAelrGAQ/fmt.webp"
                                          />
                                          <span
                                            aria-describedby="test-id"
                                            class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-web3-connect-modal-name css-dev-only-do-not-override-vrrzze"
                                          >
                                            Test Wallet
                                          </span>
                                        </div>
                                        <div
                                          class="ant-space css-dev-only-do-not-override-vrrzze ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
                                        >
                                          <div
                                            class="ant-space-item"
                                          />
                                        </div>
                                      </li>
                                      <li
                                        class="ant-list-item ant-web3-connect-modal-wallet-item"
                                      >
                                        <div
                                          class="ant-web3-connect-modal-content"
                                        >
                                          <img
                                            alt="Test Wallet3"
                                            class="ant-web3-connect-modal-img"
                                            src="https://mdn.alipayobjects.com/huamei_mutawc/afts/img/A*8LhqSZ_KatsAAAAAAAAAAAAAelrGAQ/fmt.webp"
                                          />
                                          <span
                                            aria-describedby="test-id"
                                            class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-web3-connect-modal-name css-dev-only-do-not-override-vrrzze"
                                          >
                                            Test Wallet3
                                          </span>
                                        </div>
                                        <div
                                          class="ant-space css-dev-only-do-not-override-vrrzze ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
                                        >
                                          <div
                                            class="ant-space-item"
                                          />
                                        </div>
                                      </li>
                                    </ul>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="ant-web3-connect-modal-group"
                          >
                            <div
                              class="ant-web3-connect-modal-group-title"
                            >
                              More
                            </div>
                            <div
                              class="ant-web3-connect-modal-group-content"
                            >
                              <div
                                class="ant-list ant-list-split css-dev-only-do-not-override-vrrzze"
                              >
                                <div
                                  class="ant-spin-nested-loading css-dev-only-do-not-override-vrrzze"
                                >
                                  <div
                                    class="ant-spin-container"
                                  >
                                    <ul
                                      class="ant-list-items"
                                    >
                                      <li
                                        class="ant-list-item ant-web3-connect-modal-wallet-item"
                                      >
                                        <div
                                          class="ant-web3-connect-modal-content"
                                        >
                                          <img
                                            alt="Test Wallet2"
                                            class="ant-web3-connect-modal-img"
                                            src="https://mdn.alipayobjects.com/huamei_mutawc/afts/img/A*8LhqSZ_KatsAAAAAAAAAAAAAelrGAQ/fmt.webp"
                                          />
                                          <span
                                            aria-describedby="test-id"
                                            class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-web3-connect-modal-name css-dev-only-do-not-override-vrrzze"
                                          >
                                            Test Wallet2
                                          </span>
                                        </div>
                                        <div
                                          class="ant-space css-dev-only-do-not-override-vrrzze ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
                                        >
                                          <div
                                            class="ant-space-item"
                                          />
                                        </div>
                                      </li>
                                      <li
                                        class="ant-list-item ant-web3-connect-modal-wallet-item"
                                      >
                                        <div
                                          class="ant-web3-connect-modal-content"
                                        >
                                          <img
                                            alt="Test Wallet4"
                                            class="ant-web3-connect-modal-img"
                                          />
                                          <span
                                            aria-describedby="test-id"
                                            class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-web3-connect-modal-name css-dev-only-do-not-override-vrrzze"
                                          >
                                            Test Wallet4
                                          </span>
                                        </div>
                                        <div
                                          class="ant-space css-dev-only-do-not-override-vrrzze ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
                                        >
                                          <div
                                            class="ant-space-item"
                                          />
                                        </div>
                                      </li>
                                      <li
                                        class="ant-list-item ant-web3-connect-modal-wallet-item"
                                      >
                                        <div
                                          class="ant-web3-connect-modal-content"
                                        >
                                          <img
                                            alt="Test Wallet5"
                                            class="ant-web3-connect-modal-img"
                                          />
                                          <span
                                            aria-describedby="test-id"
                                            class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-web3-connect-modal-name css-dev-only-do-not-override-vrrzze"
                                          >
                                            Test Wallet5
                                          </span>
                                        </div>
                                        <div
                                          class="ant-space css-dev-only-do-not-override-vrrzze ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
                                        >
                                          <div
                                            class="ant-space-item"
                                          />
                                        </div>
                                      </li>
                                      <li
                                        class="ant-list-item ant-web3-connect-modal-wallet-item"
                                      >
                                        <div
                                          class="ant-web3-connect-modal-content"
                                        >
                                          <img
                                            alt="Test Wallet6"
                                            class="ant-web3-connect-modal-img"
                                          />
                                          <span
                                            aria-describedby="test-id"
                                            class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-web3-connect-modal-name css-dev-only-do-not-override-vrrzze"
                                          >
                                            Test Wallet6
                                          </span>
                                        </div>
                                        <div
                                          class="ant-space css-dev-only-do-not-override-vrrzze ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
                                        >
                                          <div
                                            class="ant-space-item"
                                          />
                                        </div>
                                      </li>
                                      <li
                                        class="ant-list-item ant-web3-connect-modal-wallet-item"
                                      >
                                        <div
                                          class="ant-web3-connect-modal-content"
                                        >
                                          <img
                                            alt="Test Wallet6"
                                            class="ant-web3-connect-modal-img"
                                          />
                                          <span
                                            aria-describedby="test-id"
                                            class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-web3-connect-modal-name css-dev-only-do-not-override-vrrzze"
                                          >
                                            Test Wallet6
                                          </span>
                                        </div>
                                        <div
                                          class="ant-space css-dev-only-do-not-override-vrrzze ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
                                        >
                                          <div
                                            class="ant-space-item"
                                          />
                                        </div>
                                      </li>
                                    </ul>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-web3-connect-modal-footer-container"
                      >
                        <div
                          class="ant-web3-connect-modal-simple-guide"
                        >
                          New to crypto wallets?
                          <button
                            class="ant-btn css-dev-only-do-not-override-vrrzze ant-btn-link ant-btn-color-link ant-btn-variant-link ant-btn-sm ant-web3-connect-modal-simple-guide-right"
                            type="button"
                          >
                            <span>
                              Learn More
                            </span>
                          </button>
                        </div>
                        <div
                          class="ant-web3-connect-modal-footer"
                        >
                          Powered by AntChain
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;
